# imdb_collector

./: CMakeLists.txt  README.md  package.xml
config/: case_sensitive.txt  depends_context.txt  do_not_include.txt  galaxy_imdb.yaml  keywords.txt  lower_case.txt  prefixes.txt
launch/: imdb_collect.launch
src/: galaxy_imdb.py  imdb_collector.py  sample_node.py
test/: test_imdb_best_title.py  test_score.py
