<?xml version="1.0"?>
<package format="2">
  <name>imdb_collector</name>
  <version>0.0.0</version>
  <description>The imdb_collector package</description>

  <maintainer email="renato@gmail.com">renato</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>hs_utils</depend>
  
  <build_depend>message_generation</build_depend>
  <exec_depend>roslib</exec_depend>

  <export>
  </export>
</package>
